load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "barelymusician",
    srcs = ["barelymusician.cpp"],
    defines = ["BARELYMUSICIAN_EXPORTS"],
    deps = [
        ":include",
        "//barelymusician/engine",
    ],
    alwayslink = True,
)

cc_library(
    name = "include",
    hdrs = ["barelymusician.h"],
)

cc_test(
    name = "barelymusician_test",
    srcs = ["barelymusician_test.cpp"],
    deps = [
        ":barelymusician",
        "@googletest//:gtest_main",
    ],
)
