load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "barelymusician",
    srcs = ["barelymusician.cpp"],
    defines = ["BARELYMUSICIAN_EXPORTS"],
    deps = [
        ":barelymusician_headeronly",
        "//barelymusician/internal:control",
        "//barelymusician/internal:effect",
        "//barelymusician/internal:instrument",
        "//barelymusician/internal:musician",
        "//barelymusician/internal:performer",
        "//barelymusician/internal:task",
    ],
    alwayslink = True,
)

cc_library(
    name = "barelymusician_headeronly",
    hdrs = ["barelymusician.h"],
    visibility = ["//barelymusician/internal:__subpackages__"],
)

cc_test(
    name = "barelymusician_test",
    srcs = ["barelymusician_test.cpp"],
    deps = [
        ":barelymusician",
        "@googletest//:gtest_main",
    ],
)
