load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

# Android plugin (rename this to libbarelymusicianunity.so).
ANDROID_LINKOPTS = [
    "-ldl",
    "-lm",
    "-Wl,--version-script",
    "$(location //unity:unity_android.lds)",
    "-z defs",
]

config_setting(
    name = "android_arm64",
    values = {
        "cpu": "arm64-v8a",
    },
)

config_setting(
    name = "android_armv7",
    values = {
        "cpu": "armeabi-v7a",
    },
)

cc_binary(
    name = "libunity_android.so",
    linkopts =
        select({
            ":android_arm64": ANDROID_LINKOPTS,
            ":android_armv7": ANDROID_LINKOPTS,
            "//conditions:default": [],
        }),
    linkshared = True,
    deps = [
        ":unity_android.lds",
        "//barelymusician",
        "//barelymusician/instruments:percussion_instrument",
        "//barelymusician/instruments:sampler_instrument",
        "//barelymusician/instruments:synth_instrument",
    ],
)

# Linux plugin (rename this to libbarelymusicianunity.so).
cc_binary(
    name = "libunity_linux.so",
    linkshared = True,
    target_compatible_with = ["@platforms//os:linux"],
    deps = [
        "//barelymusician",
        "//barelymusician/instruments:percussion_instrument",
        "//barelymusician/instruments:sampler_instrument",
        "//barelymusician/instruments:synth_instrument",
    ],
)

# OSX plugin (rename this to barelymusicianunity.bundle).
cc_binary(
    name = "unity_osx.dylib",
    linkshared = True,
    target_compatible_with = ["@platforms//os:osx"],
    deps = [
        "//barelymusician",
        "//barelymusician/instruments:percussion_instrument",
        "//barelymusician/instruments:sampler_instrument",
        "//barelymusician/instruments:synth_instrument",
    ],
)

# Windows plugin (rename this to barelymusicianunity.dll).
cc_binary(
    name = "unity_windows.dll",
    linkshared = True,
    target_compatible_with = ["@platforms//os:windows"],
    win_def_file = "unity_windows.def",
    deps = [
        "//barelymusician",
        "//barelymusician/instruments:percussion_instrument",
        "//barelymusician/instruments:sampler_instrument",
        "//barelymusician/instruments:synth_instrument",
    ],
)
