load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "context_free_grammar",
    hdrs = ["context_free_grammar.h"],
    deps = [
        "//barelymusician/common:logging",
        "//barelymusician/common:random_generator",
    ],
)

cc_test(
    name = "context_free_grammar_test",
    srcs = ["context_free_grammar_test.cpp"],
    deps = [
        ":context_free_grammar",
        "//barelymusician/common:random_generator",
        "@googletest//:gtest_main",
    ],
)
