load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "api",
    srcs = [
        "instrument.cpp",
    ],
    defines = ["BARELYMUSICIAN_EXPORTS"],
    deps = [
        ":include",
        "//barelymusician/instrument",
    ],
    alwayslink = True,
)

cc_library(
    name = "include",
    hdrs = [
        "instrument.h",
        "status.h",
        "visibility.h",
    ],
)
