load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "api",
    srcs = [
        "conductor.cpp",
        "instrument.cpp",
        "performer.cpp",
    ],
    defines = ["BARELYMUSICIAN_EXPORTS"],
    deps = [
        ":include",
        "//barelymusician/conductor:transport",
        "//barelymusician/instrument",
        "//barelymusician/performer:sequence",
    ],
    alwayslink = True,
)

cc_library(
    name = "include",
    hdrs = [
        "conductor.h",
        "instrument.h",
        "performer.h",
        "status.h",
        "visibility.h",
    ],
)
